added signals and configured profiles with Users

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+admin.jpg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
